--- a/README.Rmd
+++ b/README.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(
 
 The R package `SPRING` (Semi-Parametric Rank-based approach for INference in Graphical model) estimate sparse microbial association networks using rank-based correlation with sparse graphical modeling techniques. The corresponding reference is
 
-["Microbial Networks in SPRING - Semi-parametric Rank-Based Correlation and Partial Correlation Estimation for Quantitative Microbiome Data"](https://www.frontiersin.org/articles/10.3389/fgene.2019.00516/full) by Yoon, Gaynanova, M&uuml;ller (2019) *Frontiers in Genetics* 10:516.
+Yoon, Gaynanova and M&uuml;ller (2019) [Microbial Networks in SPRING - Semi-parametric Rank-Based Correlation and Partial Correlation Estimation for Quantitative Microbiome Data](https://www.frontiersin.org/articles/10.3389/fgene.2019.00516/full). *Frontiers in Genetics*, 10:516.
 
 ## Installation
 
